--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "firebase": "^7.6.2",
-    "heliosrx": "^0.1.0",
+    "heliosrx": "file:../heliosrx",
     "vue": "^2.6.11",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
