--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "firebase": "^7.6.2",
-    "heliosrx": "file:../heliosrx",
+    "firebase": "^7.8.1",
+    "heliosrx": "^0.2.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.3",
+    "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.2",
-    "@vue/cli-plugin-eslint": "^4.1.2",
-    "@vue/cli-plugin-router": "^4.1.2",
-    "@vue/cli-plugin-vuex": "^4.1.2",
-    "@vue/cli-service": "^4.1.2",
+    "@babel/plugin-transform-named-capturing-groups-regex": "^7.8.3",
+    "@vue/cli-plugin-babel": "^4.2.2",
+    "@vue/cli-plugin-eslint": "^4.2.2",
+    "@vue/cli-plugin-router": "^4.2.2",
+    "@vue/cli-plugin-vuex": "^4.2.2",
+    "@vue/cli-service": "^4.2.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.1.2",
